# iTunesContactsExport

./: README.md  pyproject.toml
iTunesContactsExport/: __main__.py  export.py
iTunesContactsExport/iTunesDatabase/: iPhoneAddressBookDAO.py  iPhoneAddressBookImagesDAO.py  iPhoneManifestDAO.py
iTunesContactsExport/vCard/: vCardBuilder.py
